--- a/package.json
+++ b/package.json
@@ -1,24 +1,10 @@
 {
-  "name": "EconomyBot",
+  "name": "advanced-economy-bot-v13",
   "version": "1.0.0",
-  "description": "Economy bot created with quick.eco package in discord.js",
+  "description": "![logo](/main.jpg)",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "author": "RLX",
-  "license": "",
-  "keywords": [
-    "discord",
-    "Easy",
-    "Economy",
-    "bot",
-    "discord.js",
-    "discordjs"
-  ],
   "dependencies": {
     "ascii-table": "0.0.9",
-    "chalk": "^4.1.2",
     "colors": "^1.4.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
@@ -26,10 +12,22 @@
     "moment": "^2.29.1",
     "quick.eco": "^2.0.3"
   },
-  "engines": {
-    "node": "16.x"
-  },
   "devDependencies": {
-    "node": "^16.13.0"
-  }
+    "node": "^17.2.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Just9999/advanced-economy-bot-v13.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Just9999/advanced-economy-bot-v13/issues"
+  },
+  "homepage": "https://github.com/Just9999/advanced-economy-bot-v13#readme"
 }
